feat: :sparkles: flash message and time out flag added in admin dashabord

--- a/src/templates/admin_dashboard.html
+++ b/src/templates/admin_dashboard.html
@@ -12,6 +12,8 @@
 <div class="admin-dashboard">
     <h2 class="dashboard-title"><i class="fas fa-tachometer-alt"></i> Admin Dashboard</h2>
     <p class="welcome-message">Welcome, {{ current_user.username }}!</p>
+    <!-- Display flash messages -->
+    {% include "ext/flash_message.html" %}
     
     <div class="stats-cards">
         <div class="card">
