--- a/src/templates/manage_users.html
+++ b/src/templates/manage_users.html
@@ -7,6 +7,9 @@
 {% block content %}
 <h2>Manage Users</h2>
 
+<!-- Display flash messages -->
+{% include "ext/flash_message.html" %}
+
 <table>
     <thead>
         <tr>
