--- a/src/templates/gold_calculator.html
+++ b/src/templates/gold_calculator.html
@@ -12,17 +12,8 @@
         <p class="text-center">Get accurate gold price estimates quickly and easily.</p>
 
         <!-- Display flash messages -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                <div class="alert alert-{{ category }}" role="alert">
-                    {{ message }}
-                </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+        {% include "ext/flash_message.html" %}
 
-        
         <form action="/gold-calculator" method="POST" class="form-card shadow p-4 bg-white rounded">
             
             <div class="form-group">
