--- a/src/templates/silver_bill.html
+++ b/src/templates/silver_bill.html
@@ -9,6 +9,8 @@
     <div class="main-content">
         <div class="bill-card">
             <h2>Calculation Details (Silver)</h2>
+            <!-- Display flash messages -->
+            {% include "ext/flash_message.html" %}
             <div class="details">
                 <span><strong>Silver Item Weight:</strong></span>
                 <span>{{ weight }} grams</span>
