feat: audit logs can be download as csv

--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f0f2f5;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
