--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,9 +7,11 @@
 
 {% block content %}
 <h2>Login</h2>
+<!-- Display flash messages -->
+{% include "ext/flash_message.html" %}
 <form method="POST">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+    <label for="username">Username:</label>
+    <input type="username" id="username" name="username" required>
 
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
