chore: dummy user added

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -11,10 +11,10 @@
 {% include "ext/flash_message.html" %}
 <form method="POST">
     <label for="username">Username:</label>
-    <input type="username" id="username" name="username" required>
+    <input type="username" id="username" name="username" value="admin" required>
 
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password" value="admin" required>
 
     <button type="submit">Login</button>
 </form>
