--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -7,6 +7,6 @@
     <div class="error-container">
         <h1>404</h1>
         <p>Oops! The page you're looking for can't be found.</p>
-        <a href="{{ url_for('home') }}" class="btn btn-hero mt-4">Go to Home Page</a>
+        <a href="{{ url_for('homepage.home') }}" class="btn btn-hero mt-4">Go to Home Page</a>
     </div>
 {% endblock %}
