--- a/src/templates/permission_denied.html
+++ b/src/templates/permission_denied.html
@@ -7,6 +7,6 @@
     <div class="container">
         <h1>Permission Denied</h1>
         <p>You do not have enough permissions to access this page.</p>
-        <a href="{{ url_for('home') }}" class="btn btn-hero mt-4">Go to Home Page</a>
+        <a href="{{ url_for('homepage.home') }}" class="btn btn-hero mt-4">Go to Home Page</a>
     </div>
 {% endblock %}
