feat: :hammer: refactored the code

--- a/src/templates/dashboard/config.html
+++ b/src/templates/dashboard/config.html
@@ -10,7 +10,7 @@
     <!-- Display flash messages -->
     {% include "ext/flash_message.html" %}
 
-    <form method="POST" action="{{ url_for('admin.update_jeweller_details') }}" enctype="multipart/form-data">
+    <form method="POST" action="{{ url_for('admin_.update_jeweller_details') }}" enctype="multipart/form-data">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
