--- a/src/templates/dashboard/settings.html
+++ b/src/templates/dashboard/settings.html
@@ -11,7 +11,7 @@
     <!-- Display flash messages -->
     {% include "ext/flash_message.html" %}
 
-    <form method="POST" action="{{ url_for('admin.settings') }}">
+    <form method="POST" action="{{ url_for('admin_.settings') }}">
         <div class="row">
             <!-- Currency -->
             <div class="col-lg-6 col-md-12">
