--- a/src/templates/ext/navbar.html
+++ b/src/templates/ext/navbar.html
@@ -11,7 +11,7 @@
         <ul class="navbar-nav ml-auto">
             {% if current_user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('admin.dashboard') }}">
+                    <a class="nav-link" href="{{ url_for('admin_.dashboard') }}">
                         <i class="fas fa-tachometer-alt"></i> Dashboard
                     </a>
                 </li>
