--- a/src/templates/dashboard/customer_dashboard.html
+++ b/src/templates/dashboard/customer_dashboard.html
@@ -24,14 +24,14 @@
             </ul>
         </div>
 
-        <div class="recent-activity">
+        <!-- <div class="recent-activity">
             <h3><i class="fas fa-history"></i> Recent Activity</h3>
             {% for log in audit_logs %}
             <p>{{ log.timestamp }} - {{ log.action }}</p>
             <p> {{ log.details }}</p>
             <hr>
             {% endfor %}
-        </div>
+        </div> -->
     </div>
 </div>
 {% endblock %}
