--- a/src/templates/admin/change_password.html
+++ b/src/templates/admin/change_password.html
@@ -6,20 +6,18 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h2>Change Password</h2>
-    <!-- Display flash messages -->
-    {% include "ext/flash_message.html" %}
-    <form method="POST" action="{{ url_for('auth.change_password') }}">
-        <div class="form-group">
-            <label for="current_password">Current Password</label>
-            <input type="password" class="form-control" id="current_password" name="current_password" required>
-        </div>
-        <div class="form-group">
-            <label for="new_password">New Password</label>
-            <input type="password" class="form-control" id="new_password" name="new_password" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Change Password</button>
-    </form>
-</div>
+<h2 class="mb-4">Change Password</h2>
+<!-- Display flash messages -->
+{% include "ext/flash_message.html" %}
+<form method="POST" action="{{ url_for('auth.change_password') }}">
+    <div class="form-group mb-3">
+        <label for="current_password">Current Password</label>
+        <input type="password" class="form-control" id="current_password" name="current_password" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="new_password">New Password</label>
+        <input type="password" class="form-control" id="new_password" name="new_password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Change Password</button>
+</form>
 {% endblock %}
