--- a/src/templates/users/create_user.html
+++ b/src/templates/users/create_user.html
@@ -1,39 +1,40 @@
 {% extends "base/base.html" %}
 
 {% block title %}Create User{% endblock %}
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/create_user.css') }}">
+{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
-    <h1 class="mb-4">Create User</h1>
-    <form method="POST">
-        <div class="form-group">
-            <label for="fname">First Name</label>
-            <input type="text" name="fname" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label for="lname">Last Name</label>
-            <input type="text" name="lname" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" name="username" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" name="email" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" name="password" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label for="user_level">User Level</label>
-            <select name="user_level" class="form-control" required>
-                <option value="admin">Admin</option>
-                <option value="customer" selected>Customer</option>
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary">Create User</button>
-    </form>
-</div>
+<h1 class="mb-4">Create User</h1>
+<form method="POST">
+    <div class="form-group mb-3">
+        <label for="fname">First Name</label>
+        <input type="text" name="fname" id="fname" class="form-control" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="lname">Last Name</label>
+        <input type="text" name="lname" id="lname" class="form-control" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username" class="form-control" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" class="form-control" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" class="form-control" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="user_level">User Level</label>
+        <select name="user_level" id="user_level" class="form-control" required>
+            <option value="admin">Admin</option>
+            <option value="customer" selected>Customer</option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Create User</button>
+</form>
 {% endblock %}
