--- a/src/templates/users/edit_user.html
+++ b/src/templates/users/edit_user.html
@@ -1,35 +1,36 @@
 {% extends "base/base.html" %}
 
 {% block title %}Edit User{% endblock %}
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/edit_user.css') }}">
+{% endblock %}
 
 {% block content %}
-<div class="container mt-4">
-    <h1 class="mb-4">Edit User</h1>
-    <form method="POST">
-        <div class="form-group">
-            <label for="fname">First Name</label>
-            <input type="text" name="fname" class="form-control" value="{{ user.fname }}" required>
-        </div>
-        <div class="form-group">
-            <label for="lname">Last Name</label>
-            <input type="text" name="lname" class="form-control" value="{{ user.lname }}" required>
-        </div>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" name="username" class="form-control" value="{{ user.username }}" required>
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" name="email" class="form-control" value="{{ user.email }}" required>
-        </div>
-        <div class="form-group">
-            <label for="user_level">User Level</label>
-            <select name="user_level" class="form-control" required>
-                <option value="admin" {% if user.user_level == 'admin' %}selected{% endif %}>Admin</option>
-                <option value="customer" {% if user.user_level == 'customer' %}selected{% endif %}>Customer</option>
-            </select>
-        </div>
-        <button type="submit" class="btn btn-success">Update User</button>
-    </form>
-</div>
+<h1 class="mb-4">Edit User</h1>
+<form method="POST">
+    <div class="form-group mb-3">
+        <label for="fname">First Name</label>
+        <input type="text" name="fname" id="fname" class="form-control" value="{{ user.fname }}" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="lname">Last Name</label>
+        <input type="text" name="lname" id="lname" class="form-control" value="{{ user.lname }}" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username" class="form-control" value="{{ user.username }}" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" class="form-control" value="{{ user.email }}" required>
+    </div>
+    <div class="form-group mb-3">
+        <label for="user_level">User Level</label>
+        <select name="user_level" id="user_level" class="form-control" required>
+            <option value="admin" {% if user.user_level=='admin' %}selected{% endif %}>Admin</option>
+            <option value="customer" {% if user.user_level=='customer' %}selected{% endif %}>Customer</option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-success">Update User</button>
+</form>
 {% endblock %}
